# AI_Daily_Brief

./: .env.example  .gitignore  Makefile  README.md  crontab.example  pyproject.toml  requirements.txt
.github/workflows/: daily-brief.yml
ai_news_bot/: __init__.py  classifier.py  config.py  crawler.py  feishu_app.py  feishu_card.py  locale_utils.py  logging_config.py  main.py  paths.py  summarizer.py
docs/: CLOUD_SCHEDULE.md  DEPLOY.md  FEISHU_PERSONAL.md  FEISHU_SOLO_GROUP.md  GITHUB_ACTIONS_空白排查.md  IMPLEMENTATION_HANDBOOK.md  MODEL_PROVIDERS.md  还需你完成2步.md
scripts/: bootstrap.sh  com.ai.daily-brief.login.plist  com.ai.daily-brief.plist  disable_local_schedule.sh  feishu_get_open_id.py  finish_github_setup.sh  install_crontab.sh  install_launchd.sh  open_github_setup.sh  run_daily.sh  setup_external_cron.sh  trigger_github_workflow.sh  validate_secrets_local.sh  verify_phase0.py  verify_phases.py
