[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-news-bot"
version = "1.0.0"
description = "AI industry daily brief: RSS crawl, summarize, Feishu push"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "feedparser>=6.0.11",
    "requests>=2.31.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.1",
    "tzdata>=2024.1",
]

[project.scripts]
ai-daily-brief = "ai_news_bot.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_news_bot*"]
